<resources>
    <string name="app_name">Mobile Manager</string>
    <string name="setting_title">设置中心</string>
    <string name="main_title">功能列表</string>
    <string name="button_ok">确认</string>
    <string name="button_cancel">取消</string>
    <string name="phonesafe">手机防盗</string>
    <string name="functon_intro">功能简介:</string>
    <string name="sim_change">SIM卡变更报警</string>
    <string name="play_alarm">播放报警音乐:*#alarm#*</string>
    <string name="trace_position">GPS追踪:*#location#*</string>
    <string name="wipedata">远程擦除数据:*#wipedata#*</string>
    <string name="remote_lock">远程锁屏:*#lockscreen#*</string>
    <string name="resetup">重新进入设置向导</string>
    <string name="next">下一步</string>
    <string name="packagemanager">软件管理</string>
</resources>
