<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.chenqiao.mobilemanager.Setup1Activity">

    <TextView
        style="@style/myPageTile"
        android:text="欢迎开启手机防盗" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/functon_intro"
        android:padding="4dp"
        android:textSize="20sp"/>
    <TextView
        style="@style/mysetuptext"
        android:text="@string/sim_change"/>
    <TextView
        style="@style/mysetuptext"
        android:text="@string/trace_position"/>
    <TextView
        style="@style/mysetuptext"
        android:text="@string/wipedata"/>

    <TextView
        style="@style/mysetuptext"
        android:text="@string/remote_lock"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@android:drawable/presence_online"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@android:drawable/presence_invisible"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@android:drawable/presence_invisible"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@android:drawable/presence_invisible"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/setup1"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:textColor="#ffffff"
            android:text="@string/next"
            android:background="@drawable/bt_bg"
            android:onClick="next"/>
    </RelativeLayout>
</LinearLayout>
